add useradmincontrollertest